<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/configure"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="normal" />


        <Button
            android:id="@+id/general_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dummy"
            android:text="@string/general"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/business_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dummy"
            android:text="@string/business"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/money_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dummy"
            android:text="@string/money"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/technology_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dummy"
            android:text="@string/technology"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/science_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dummy"
            android:text="@string/science"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/sports_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dummy"
            android:text="@string/sports"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/travel_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dummy"
            android:text="@string/travel"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="22sp"
            android:textStyle="normal" />

    </LinearLayout>

</ScrollView>
