<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="@dimen/dfkjgdjkf6564"
        android:paddingStart="@dimen/dkfjbghksd54"
        android:paddingTop="@dimen/dfbgdfkm3656">

        <!-- Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/jkghks545">

            <EditText
                android:id="@+id/child_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_post_child_name"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <!-- Address Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dfjghkd54"
            android:layout_marginTop="@dimen/dfngsm547">

            <EditText
                android:id="@+id/child_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_post_child_age"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8">

            <EditText
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_post_girl_or_boy"
                android:inputType="textAutoComplete" />
        </android.support.design.widget.TextInputLayout>


        <!-- mobile number -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8">

            <EditText
                android:id="@+id/child_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_post_height_in_meters"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8">

            <EditText
                android:id="@+id/child_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_post_weight_in_kilo"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Re-enter Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8">

            <EditText
                android:id="@+id/child_heir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_post_heir_color"
                android:inputType="textAutoComplete" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8">

            <EditText
                android:id="@+id/child_eyes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_post_eyes_color"
                android:inputType="textAutoComplete" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8">

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/create_post_description"
                android:inputType="textMultiLine" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/child_image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_200"
            android:layout_marginBottom="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:contentDescription="@string/dummy"
            android:padding="@dimen/dp_12"
            android:textColor="@color/white" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/chose_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="@dimen/dp_24"
            android:padding="@dimen/dp_12"
            android:text="@string/create_post_chose_image"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/address_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_24"
            android:contentDescription="@string/dummy"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/create_post_your_address"
            android:textColor="@color/uoio5"
            android:textSize="16sp" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/chose_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginTop="@dimen/dp_24"
            android:contentDescription="@string/dummy"
            android:padding="@dimen/dp_12"
            android:text="@string/create_post_select_address"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>