<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PhoneActivity">


    <!-- mobile number -->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_mobile00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:layout_marginBottom="@dimen/dp_8"
        android:contentDescription="@string/dummy">

        <EditText
            android:id="@+id/input_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:textColor="@color/black" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save_status_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_mobile00"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fcgbg5g"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/dummy"
        android:padding="@dimen/g5f5ghh5"
        android:text="@string/save_changes"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

</RelativeLayout>
