<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingEnd="@dimen/jhgkjhuyj654"
        android:paddingStart="@dimen/jkjkjkoip"
        android:paddingTop="@dimen/pokjhjkl52">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/kjbhhjvh874"
            android:contentDescription="@string/dummy"
            android:gravity="center_horizontal"
            android:text="@string/login"
            android:textSize="@dimen/mnnmbj78" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_8"
            android:layout_marginTop="@dimen/dp_8"
            android:contentDescription="@string/dummy">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/sym_action_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/dummy">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_partial_secure"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_24"
            android:layout_marginTop="@dimen/dp_24"
            android:contentDescription="@string/dummy"
            android:padding="@dimen/dp_12"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_24"
            android:contentDescription="@string/dummy"
            android:gravity="center"
            android:linksClickable="true"
            android:text="@string/no_account_yet_create_one"
            android:textColor="@color/rytr2h1j"
            android:textSize="@dimen/fhf552h" />

    </LinearLayout>
</ScrollView>
