<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/list_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeightSmall"
            android:background="#60E91E63"
            android:gravity="center">

            <TextView
                android:id="@+id/title"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textStyle="bold" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ListView
                android:id="@+id/widget_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="@null"
                android:dividerHeight="0dp" />

            <TextView
                android:id="@+id/widget_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/dummy"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/no_articles"
                android:textAppearance="?android:textAppearanceLarge" />
        </FrameLayout>

    </LinearLayout>

</FrameLayout>